home/iptables-save/rules.v4
# Generated by iptables-save v1.8.9 (nf_tables) on Fri Feb 16 10:08:39 2024
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i wlp3s0 -p esp -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -i enp2s0 -p esp -j MARK --set-xmark 0x1/0xffffffff
COMMIT
# Completed on Fri Feb 16 10:08:39 2024
# Generated by iptables-save v1.8.9 (nf_tables) on Fri Feb 16 10:08:39 2024
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [16:1044]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags RST RST -m limit --limit 2/sec --limit-burst 2 -j ACCEPT
-A INPUT -p udp -m udp --sport 123 -j ACCEPT
-A INPUT -m state --state INVALID -j DROP
-A INPUT -i wlp3s0 -f -j DROP
-A INPUT -i enp2s0 -f -j DROP
-A INPUT -s 224.0.0.0/4 -j DROP
-A INPUT -s 240.0.0.0/5 -j DROP
-A INPUT -s 10.0.0.0/8 -j DROP
-A INPUT -s 169.254.0.0/16 -j DROP
-A INPUT -s 172.16.0.0/12 -j DROP
-A INPUT -s 127.0.0.0/8 -j DROP
-A INPUT -s 192.168.0.0/16 -j DROP
-A INPUT -d 224.0.0.0/4 -j DROP
-A INPUT -d 240.0.0.0/5 -j DROP
-A INPUT -s 0.0.0.0/8 -j DROP
-A INPUT -d 0.0.0.0/8 -j DROP
-A INPUT -d 239.255.255.0/24 -j DROP
-A INPUT -d 255.255.255.255/32 -j DROP
-A INPUT -p icmp -m icmp --icmp-type 17 -j DROP
-A INPUT -p icmp -m icmp --icmp-type 13 -j DROP
-A INPUT -j LOG --log-prefix "<<fw-input>>: " --log-level 6
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 172.20.200.0/24 -o wlp3s0 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 172.20.200.0/24 -i wlp3s0 -p tcp -m tcp --sport 22 -j ACCEPT
-A FORWARD -i wlp3s0 -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 172.20.200.0/24 -i wlp3s0 -o tun0 -p udp -m udp --dport 1194 -j ACCEPT
-A FORWARD -d 172.20.200.0/24 -o enp2s0 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 172.20.200.0/24 -i enp2s0 -p tcp -m tcp --sport 22 -j ACCEPT
-A FORWARD -i enp2s0 -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 172.20.200.0/24 -i enp2s0 -o tun0 -p udp -m udp --dport 1194 -j ACCEPT
-A FORWARD -i tun0 -j ACCEPT
-A FORWARD -i tun0 -o enp2s0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 172.20.200.0/24 -i tun0 -o enp2s0 -p udp -m udp --sport 1194 -j ACCEPT
-A FORWARD -m state --state INVALID -j DROP
-A FORWARD -j LOG --log-prefix "<<fw-forward>>: " --log-level 6
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -d 172.16.200.0/22 -p udp -m udp --dport 1194 -j ACCEPT
-A OUTPUT -d 172.20.200.0/24 -o wlp3s0 -p udp -m udp --dport 1194 -j ACCEPT
-A OUTPUT -d 172.20.200.0/24 -o enp2s0 -p udp -m udp --dport 1194 -j ACCEPT
-A OUTPUT -o tun0 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT
-A OUTPUT -s 172.16.200.0/22 -p tcp -m tcp --dport 3000:65400 -m comment --comment XRDP -j ACCEPT
-A OUTPUT -s 172.16.200.0/22 -p udp -m udp --dport 3000:65400 -m comment --comment Kalunga -j ACCEPT
-A OUTPUT -s 172.20.200.0/24 -p tcp -m tcp --dport 3000:65400 -m comment --comment XRDP -j ACCEPT
-A OUTPUT -s 172.20.200.0/24 -p udp -m udp --dport 3000:65400 -m comment --comment Kalunga -j ACCEPT
-A OUTPUT -s 172.20.80.0/24 -p tcp -m tcp --dport 3000:65400 -m comment --comment XRDP -j ACCEPT
-A OUTPUT -s 172.20.80.0/24 -p udp -m udp --dport 3000:65400 -m comment --comment Kalunga -j ACCEPT
-A OUTPUT -p udp -m udp --dport 22 -m comment --comment SSH -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -m comment --comment SSH -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 25 -m comment --comment Email -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -m comment --comment DNS-TCP -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -m comment --comment DNS-UDP -j ACCEPT
-A OUTPUT -p udp -m udp --dport 67:68 -m comment --comment DHCP -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -m comment --comment HTTP -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -m comment --comment "HTTPS 443" -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 8443 -m comment --comment "HTTPS 8443" -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 465 -m comment --comment SMTPS -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 587 -m comment --comment SMTPS -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 993 -m comment --comment IMAPS -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 1433 -m comment --comment "SQL Server" -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 3306 -m comment --comment "MySql Server" -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 5432 -m comment --comment PostGreSQL -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 25432 -m comment --comment PostGreSQL -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 26379 -m comment --comment RedisSentinel -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 6379 -m comment --comment Redis -j ACCEPT
-A OUTPUT -o wlp3s0 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -o enp2s0 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -o wlp3s0 -p tcp -m tcp --dport 21 -j ACCEPT
-A OUTPUT -o enp2s0 -p tcp -m tcp --dport 21 -j ACCEPT
-A OUTPUT -m state --state INVALID -j DROP
-A OUTPUT -j LOG --log-prefix "<<fw-output>>: " --log-level 6
COMMIT
# Completed on Fri Feb 16 10:08:39 2024
# Generated by iptables-save v1.8.9 (nf_tables) on Fri Feb 16 10:08:39 2024
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -s 172.16.200.0/22 -i wlp3s0 -m mark --mark 0x1 -j ACCEPT
-A PREROUTING -s 172.16.200.0/22 -i enp2s0 -m mark --mark 0x1 -j ACCEPT
-A PREROUTING -s 172.23.12.128/25 -i wlp3s0 -m mark --mark 0x1 -j ACCEPT
-A PREROUTING -s 172.23.12.128/25 -i enp2s0 -m mark --mark 0x1 -j ACCEPT
-A PREROUTING -s 172.20.200.0/24 -i wlp3s0 -m mark --mark 0x1 -j ACCEPT
-A PREROUTING -s 172.20.200.0/24 -i enp2s0 -m mark --mark 0x1 -j ACCEPT
-A PREROUTING -s 172.20.80.0/24 -i wlp3s0 -m mark --mark 0x1 -j ACCEPT
-A PREROUTING -s 172.20.80.0/24 -i enp2s0 -m mark --mark 0x1 -j ACCEPT
-A PREROUTING -m state --state RELATED,ESTABLISHED -j ACCEPT
-A POSTROUTING -s 172.16.200.0/22 -o wlp3s0 -j MASQUERADE
-A POSTROUTING -s 172.16.200.0/22 -o enp2s0 -j MASQUERADE
-A POSTROUTING -s 172.16.200.0/22 -o enp2s0 -j MASQUERADE
-A POSTROUTING -s 172.23.12.128/25 -o wlp3s0 -j MASQUERADE
-A POSTROUTING -s 172.23.12.128/25 -o enp2s0 -j MASQUERADE
-A POSTROUTING -s 172.23.12.128/25 -o enp2s0 -j MASQUERADE
-A POSTROUTING -s 172.20.200.0/24 -o wlp3s0 -j MASQUERADE
-A POSTROUTING -s 172.20.200.0/24 -o enp2s0 -j MASQUERADE
-A POSTROUTING -s 172.20.200.0/24 -o enp2s0 -j MASQUERADE
-A POSTROUTING -s 172.20.80.0/24 -o wlp3s0 -j MASQUERADE
-A POSTROUTING -s 172.20.80.0/24 -o enp2s0 -j MASQUERADE
-A POSTROUTING -s 172.20.80.0/24 -o enp2s0 -j MASQUERADE
-A POSTROUTING -o tun0 -j MASQUERADE
-A POSTROUTING -o wlp3s0 -j MASQUERADE
-A POSTROUTING -o enp2s0 -j MASQUERADE
COMMIT
# Completed on Fri Feb 16 10:08:39 2024
